--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "env": {
     "API_SECRET": {
       "description": "This must match the API_SECRET password from your Nightscout website.",
-      "value": "31LorTon",
+      "value": "IamaSHAREbridgeKEY",
       "required": true
     },
     "DEXCOM_ACCOUNT_NAME": {
